JobService is working now. modified .gitignore to ignore test/Test.java: Class for testing purposes. TODO: Create readible job files.